--- a/day 26/groupwork/register.html
+++ b/day 26/groupwork/register.html
@@ -40,7 +40,7 @@
             <label>I agree to the terms and conditions.</label>
             <br>
             <br>
-            <input type="button">
+            <button>Register</button>
         </form>
     </body>
 </html>
