Update python or javascript.html

--- a/day 100/python or javascript.html
+++ b/day 100/python or javascript.html
@@ -17,8 +17,8 @@
     <main>
         <h2>რომელი პროგრამის სწავლა გირჩევნია?</h2>
         <div id="python_or_javascript">
-            <img src="Images/Python.png" width="170">
-            <img src="Images/Javascript.png" width="150">
+            <img src="Images/Python.png" alt="Python" width="170">
+            <img src="Images/JavaScript.png" alt="JavaScript" width="150">
         </div>
         <button id="python" onclick="python()">Python</button>
         <button id="javascript" onclick="javascript()">Javascript</button>
@@ -31,4 +31,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
